# CANdevStudio

./: .appveyor.yml  .gitmodules  .travis.yml  .trigger_appveyor.rb  CMakeLists.txt  start(
cmake/Modules/: CompilerVersion.cmake
src/common/: CMakeLists.txt  componentcontext.h  componentinterface.h  componentmodel.h  context.h  pluginloader.h  propertyfields.h  pythonbackend.cpp  pythonbackend.h  shmemmgr.cpp  shmemmgr.h
src/common/cds-python/: pythonbackend.cpp  pythonfrontend.cpp  pythonfrontend.h  shmemmgr.h
src/common/cds-python/pythonqt/: PythonQt.cpp  PythonQtClassWrapper.cpp  src.pro
src/common/datamodeltypes/: canrawdata.h  cdsdatabase.h  datadirection.h
src/components/: CMakeLists.txt
src/components/candevice/: CMakeLists.txt  candevice.cpp  candevice.h  candevice_p.h  candeviceinterface.hpp  candevicemodel.h  candeviceqt.hpp
src/components/candevice/tests/: candevice_test.cpp  candevicemodel_test.cpp
src/components/canload/: canload.h  canloadmodel.h
src/components/canload/tests/: canload_test.cpp  canloadmodel_test.cpp
src/components/canrawfilter/: canrawfilter.h  canrawfiltermodel.h
src/components/canrawfilter/tests/: canrawfilter_test.cpp  canrawfiltermodel_test.cpp
src/components/canrawlogger/: canrawlogger.h  canrawloggermodel.h
src/components/canrawlogger/tests/: canrawlogger_test.cpp  canrawloggermodel_test.cpp
src/components/canrawplayer/: canrawplayer.h  canrawplayermodel.h
src/components/canrawplayer/tests/: canrawplayer_test.cpp  canrawplayermodel_test.cpp
src/components/canrawsender/: CMakeLists.txt  canrawsender.cpp  canrawsender.h  canrawsender.ui  canrawsender_p.cpp  canrawsender_p.h  configwindow.ui  crsgui.hpp  crsguiinterface.hpp  newlinemanager.cpp
src/components/canrawsender/tests/: canrawsender_test.cpp  newlinemanager_test.cpp
src/components/canrawview/: CMakeLists.txt  canrawview.cpp  canrawview.h  canrawview_p.h  crvitemmodel.h
src/components/canrawview/gui/: crvgui.h
src/components/canrawview/tests/: canrawview_test.cpp  canrawviewmodel_test.cpp
src/components/cansignaldata/: cansignaldata.h  cansignaldatamodel.h
src/components/cansignaldata/gui/: cansignaldataguiimpl.h
src/components/cansignaldecoder/: cansignaldecoder.h  cansignaldecodermodel.h
src/components/cansignalencoder/: cansignalencoder.h  cansignalencodermodel.h
src/components/cansignalsender/: cansignalsender.h  cansignalsender_p.cpp  cansignalsender_p.h  cansignalsendermodel.h
src/components/cansignalsender/gui/: cansignalsenderguiimpl.h  cansignalsenderguiint.h
src/components/cansignalviewer/: cansignalviewer.h  cansignalviewermodel.h
src/components/projectconfig/: CMakeLists.txt  candevicemodel.cpp  candevicemodel.h  canrawsendermodel.cpp  canrawsendermodel.h  canrawviewmodel.cpp  canrawviewmodel.h  componentmodel.cpp  componentmodel.h  projectconfig_p.h  projectconfigvalidator.cpp
src/components/pyscripter/: CMakeLists.txt  outhandler.h  psmessage.cpp  psmessage.h  pyscripter.cpp  pyscripter.h  pyscripter_p.cpp  pyscripter_p.h  pyscriptermodel.cpp  pyscriptermodel.h  pyscripterplugin.h  pythonbackend.cpp  pythonbackend.h  pythonfrontend.cpp  pythonfrontend.h  qcanbusframedecorator.h  shmemmgr.cpp  shmemmgr.h
src/components/pyscripter/examples/: cyclic_timers.py  loopback.py
src/components/pyscripter/tests/: pyscripter_test.cpp  pyscriptermodel_test.cpp  test.py
src/gui/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
src/gui/projectconfig/: pcimpl.h  projectconfig.h  projectconfig_p.h
src/gui/projectconfig/tests/: projectconfig_test.cpp  projectconfig_test_noqrc.cpp
tests/: CMakeLists.txt  candeviceqt_test.cpp  candevicetest.cpp  canrawsender_test.cpp  canrawview_test.cpp  canrawviewmodel_test.cpp  example.cpp  projectconfig_test.cpp  projectconfig_test_noqrc.cpp  socketcan_test.cpp
tools/templategen/: main.cpp
travis/: build.sh
